--- a/gb/22/11/30/n13876294.md
+++ b/gb/22/11/30/n13876294.md
@@ -1,21 +1,21 @@
 <a name="1" id="1" target="_blank"></a><span id="1"></span>
-<table align=center border="0"><tr><td colspan="2" VALIGN=TOP><a href="https://github.com/19920513/djy/blob/master/gb/nf1351518.md#1"><img src="https://raw.githubusercontent.com/19920513/www/master/t/djy/1.jpg" title="大纪元首页" alt="大纪元首页"></a><a href="https://github.com/19920513/djy/blob/master/gb/n24hr.md#1"><img src="https://raw.githubusercontent.com/19920513/www/master/t/djy/3.jpg" title="国际新闻" alt="国际新闻"></a><a href="https://github.com/19920513/djy/blob/master/gb/nsc413.md#1"><img src="https://raw.githubusercontent.com/19920513/www/master/t/djy/4.jpg" title="大陆新闻" alt="大陆新闻"></a><a href="https://github.com/19920513/djy/blob/master/gb/news392.md#1"><img src="https://raw.githubusercontent.com/19920513/www/master/t/djy/5.jpg" title="大纪元评论" alt="大纪元评论"></a><a href="https://github.com/19920513/djy/blob/master/gb/news2007.md#1"><img src="https://raw.githubusercontent.com/19920513/www/master/t/djy/6.jpg" title="传统文化" alt="传统文化"></a><a href="https://github.com/19920513/djy/blob/master/gb/news2008.md#1"><img src="https://raw.githubusercontent.com/19920513/www/master/t/djy/7.jpg" title="生活消费" alt="生活消费"></a><a href="https://github.com/19920513/djy/blob/master/gb/ncyule.md#1"><img src="https://raw.githubusercontent.com/19920513/www/master/t/djy/8.jpg" title="娱乐休闲" alt="娱乐休闲"></a><a href="https://github.com/19920513/djy/blob/master/gb/nsc1002.md#1"><img src="https://raw.githubusercontent.com/19920513/www/master/t/djy/9.jpg" title="健康" alt="健康"></a><a href="https://github.com/19920513/djy/blob/master/gb/nf6092.md#1"><img src="https://raw.githubusercontent.com/19920513/www/master/t/djy/10a.jpg" title="独家" alt="独家"></a><a href="https://github.com/19920513/djy/blob/master/gb/nf4514.md#1"><img src="https://raw.githubusercontent.com/19920513/www/master/t/djy/12a.jpg" title="头条要闻" alt="头条要闻"></a></td></tr>
-<tr><td colspan="2" VALIGN=TOP><a target="_blank" href="https://github.com/19920513/www/blob/master/README.md?zsrh#1">翻墙</a> | <a target="_blank" href="https://github.com/19920513/djy/blob/master/gb/nf5657.md#1">三退</a> | <a target="_blank" href="https://github.com/19920513/djy/blob/master/gb/nf6124.md#1">诉江</a> | <a target="_blank" href="https://github.com/19920513/djy/blob/master/gb/nf1176117.md#1">中共卖国</a> | <a target="_blank" href="https://github.com/19920513/djy/blob/master/gb/nf5773.md#1">贪腐淫乱</a> | <a target="_blank" href="https://github.com/19920513/djy/blob/master/gb/nf1176115.md#1">窜改历史</a> | <a target="_blank" href="https://github.com/19920513/djy/blob/master/gb/nf1176107.md#1">党魁画皮</a> | <a target="_blank" href="https://github.com/19920513/djy/blob/master/gb/nf1320400.md#1">中共间谍</a> | <a target="_blank" href="https://github.com/19920513/djy/blob/master/gb/nf1176114.md#1">破坏传统</a> | <a target="_blank" href="https://github.com/19920513/ntdtv/blob/master/gb/prog447_1.md#1">恶贯满盈</a> | <a target="_blank" href="https://github.com/19920513/djy/blob/master/gb/ncid278.md#1">人权</a> | <a target="_blank" href="https://github.com/19920513/djy/blob/master/gb/nf1176111.md#1">迫害</a> | <a target="_blank" href="https://gitlab.com/szzdlab/mh-qikan/blob/master/README.md#1">期刊</a> | <a target="_blank" href="https://github.com/19920513/djy/blob/master/gb/nf5562.md#1">伪火</a></p><p><a target="_blank" href="https://github.com/19920513/djy/blob/master/gb/9p.md#1">社论</a> | <a target="_blank" href="https://github.com/19920513/djy/blob/master/gb/nf4378.md#1">问答</a> | <a target="_blank" href="https://github.com/19920513/djy/blob/master/gb/nf5792.md#1">剖析</a> | <a target="_blank" href="https://github.com/19920513/djy/blob/master/gb/nf5735.md#1">两岸比对</a> | <a target="_blank" href="https://github.com/19920513/djy/blob/master/gb/nf6119.md#1">各国褒奖</a> | <a target="_blank" href="https://github.com/19920513/djy/blob/master/gb/nf6120.md#1">民众声援</a> | <a target="_blank" href="https://github.com/19920513/djy/blob/master/gb/nf1188594.md#1">难忘记忆</a> | <a target="_blank" href="https://github.com/19920513/djy/blob/master/gb/nf3180.md#1">海外弘传</a> | <a target="_blank" href="https://github.com/19920513/djy/blob/master/gb/nf5410.md#1">万人上访</a> | <a target="_blank" href="https://github.com/19920513/www/blob/master/README.md?zsrh#1">平台首页</a> | <a target="_blank" href="https://github.com/19920513/djy/blob/master/gb/nf4386.md#1">支持</a> | <a target="_blank" href="https://github.com/19920513/djy/blob/master/gb/nf4389.md#1">真相</a> | <a target="_blank" href="https://github.com/19920513/djy/blob/master/gb/nf5790.md#1">圣缘</a> | <a target="_blank" href="https://github.com/19920513/djy/blob/master/gb/nf4786.md#1">神韵</a></td></tr>
+<table align=center border="0"><tr><td colspan="2" VALIGN=TOP><a href="https://github.com/1992513/djy/blob/master/gb/nf1351518.md#1"><img src="https://raw.githubusercontent.com/1992513/www/master/t/djy/1.jpg" title="大纪元首页" alt="大纪元首页"></a><a href="https://github.com/1992513/djy/blob/master/gb/n24hr.md#1"><img src="https://raw.githubusercontent.com/1992513/www/master/t/djy/3.jpg" title="国际新闻" alt="国际新闻"></a><a href="https://github.com/1992513/djy/blob/master/gb/nsc413.md#1"><img src="https://raw.githubusercontent.com/1992513/www/master/t/djy/4.jpg" title="大陆新闻" alt="大陆新闻"></a><a href="https://github.com/1992513/djy/blob/master/gb/news392.md#1"><img src="https://raw.githubusercontent.com/1992513/www/master/t/djy/5.jpg" title="大纪元评论" alt="大纪元评论"></a><a href="https://github.com/1992513/djy/blob/master/gb/news2007.md#1"><img src="https://raw.githubusercontent.com/1992513/www/master/t/djy/6.jpg" title="传统文化" alt="传统文化"></a><a href="https://github.com/1992513/djy/blob/master/gb/news2008.md#1"><img src="https://raw.githubusercontent.com/1992513/www/master/t/djy/7.jpg" title="生活消费" alt="生活消费"></a><a href="https://github.com/1992513/djy/blob/master/gb/ncyule.md#1"><img src="https://raw.githubusercontent.com/1992513/www/master/t/djy/8.jpg" title="娱乐休闲" alt="娱乐休闲"></a><a href="https://github.com/1992513/djy/blob/master/gb/nsc1002.md#1"><img src="https://raw.githubusercontent.com/1992513/www/master/t/djy/9.jpg" title="健康" alt="健康"></a><a href="https://github.com/1992513/djy/blob/master/gb/nf6092.md#1"><img src="https://raw.githubusercontent.com/1992513/www/master/t/djy/10a.jpg" title="独家" alt="独家"></a><a href="https://github.com/1992513/djy/blob/master/gb/nf4514.md#1"><img src="https://raw.githubusercontent.com/1992513/www/master/t/djy/12a.jpg" title="头条要闻" alt="头条要闻"></a></td></tr>
+<tr><td colspan="2" VALIGN=TOP><a target="_blank" href="https://github.com/1992513/www/blob/master/README.md?zsrh#1">翻墙</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf5657.md#1">三退</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf6124.md#1">诉江</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf1176117.md#1">中共卖国</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf5773.md#1">贪腐淫乱</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf1176115.md#1">窜改历史</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf1176107.md#1">党魁画皮</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf1320400.md#1">中共间谍</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf1176114.md#1">破坏传统</a> | <a target="_blank" href="https://github.com/1992513/ntdtv/blob/master/gb/prog447_1.md#1">恶贯满盈</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/ncid278.md#1">人权</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf1176111.md#1">迫害</a> | <a target="_blank" href="https://gitlab.com/szzdlab/mh-qikan/blob/master/README.md#1">期刊</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf5562.md#1">伪火</a></p><p><a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/9p.md#1">社论</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf4378.md#1">问答</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf5792.md#1">剖析</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf5735.md#1">两岸比对</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf6119.md#1">各国褒奖</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf6120.md#1">民众声援</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf1188594.md#1">难忘记忆</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf3180.md#1">海外弘传</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf5410.md#1">万人上访</a> | <a target="_blank" href="https://github.com/1992513/www/blob/master/README.md?zsrh#1">平台首页</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf4386.md#1">支持</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf4389.md#1">真相</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf5790.md#1">圣缘</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf4786.md#1">神韵</a></td></tr>
 <tr><td VALIGN=TOP width="626"><h2 align=center>解封遥遥无期 中国Z世代不再“躺平”</h2>
 <img width="600" src="https://i.epochtimes.com/assets/uploads/2022/11/id13875579-000_32UU98D-600x400.jpg" />
 <h6>2022年11月27日，清华大学的学生举行抗议活动。(AFPTV/AFP)
 </h6>
 <hr>
-	<p>【大纪元2022年12月01日讯】（大纪元记者张婷综合报导）观察人士发现，中国年轻人正成为席卷全国<ahref="https://github.com/19920513/djy/blob/master/gb/tag/%E6%8A%97%E8%AE%AE.md#1">抗议</a>大潮的重要力量。彭博社亚洲事务专栏作家亚当?敏特（Adam Minter）11月28日发文说，中国的<ahref="https://github.com/19920513/djy/blob/master/gb/tag/z%E4%B8%96%E4%BB%A3.md#1">Z世代</a>上周末“不再<ahref="https://github.com/19920513/djy/blob/master/gb/tag/%E8%BA%BA%E5%B9%B3.md#1">躺平</a>”，而是加入<ahref="https://github.com/19920513/djy/blob/master/gb/tag/%E6%8A%97%E8%AE%AE.md#1">抗议</a>中。这是一个突然的转变。</p>
-<p>中国的<ahref="https://github.com/19920513/djy/blob/master/gb/tag/z%E4%B8%96%E4%BB%A3.md#1">Z世代</a>出生于1990年代末和2010年代初。华人有时称为“千禧宝宝”。Z世代年轻人原本是中国史上教育程度最高的一代人，但在诸多因素打击下，却有1,500万名年轻人失业。Z世代对中国现状的不满情绪正在中国一些最精英的大学校园内引发公开抗议活动。</p>
+	<p>【大纪元2022年12月01日讯】（大纪元记者张婷综合报导）观察人士发现，中国年轻人正成为席卷全国抗议大潮的重要力量。彭博社亚洲事务专栏作家亚当?敏特（Adam Minter）11月28日发文说，中国的Z世代上周末“不再躺平”，而是加入抗议中。这是一个突然的转变。</p>
+<p>中国的Z世代出生于1990年代末和2010年代初。华人有时称为“千禧宝宝”。Z世代年轻人原本是中国史上教育程度最高的一代人，但在诸多因素打击下，却有1,500万名年轻人失业。Z世代对中国现状的不满情绪正在中国一些最精英的大学校园内引发公开抗议活动。</p>
 <h2>中国现状使得Z世代的挫败感和愤怒与日俱增</h2>
-<p>与他们的父母不同，Z世代是在中国经济最乐观的几年中成长起来的，他们大多相信自己在学校的努力会得到回报。然而，中共“<ahref="https://github.com/19920513/djy/blob/master/gb/tag/%E6%B8%85%E9%9B%B6.md#1">清零</a>政策”带来的经济打击导致了私营部门大规模裁员。此外，中共近两年来对房地产、私营教育、科技业的打压与监管，也导致了企业的大幅裁员。随着中国经济增长大幅放缓，缺乏可见的回报使这些年轻人的挫败感和愤怒日益增加。</p>
+<p>与他们的父母不同，Z世代是在中国经济最乐观的几年中成长起来的，他们大多相信自己在学校的努力会得到回报。然而，中共“清零政策”带来的经济打击导致了私营部门大规模裁员。此外，中共近两年来对房地产、私营教育、科技业的打压与监管，也导致了企业的大幅裁员。随着中国经济增长大幅放缓，缺乏可见的回报使这些年轻人的挫败感和愤怒日益增加。</p>
 <p>彭博社专栏作家敏特说，没有人比中国的Z世代的境况更糟。对于那些还在上大学的中国年轻人来说，COVID-19是一场悲剧。除了眼睁睁地看着工作前景和个人目标化为泡影之外，他们还经常被限制在宿舍里数周甚至数月，一些人报告说基本必需品短缺，包括卫生用品、食品和医疗服务。</p>
 <p>求助的呼声经常出现在社交媒体上，至少一项研究记录了持续的精神损失，而不仅仅是长期的个人和职业后果。</p>
 <p>对于那些能够幸运毕业，从而逃离学校封锁的年轻人来说，情况往往好不了多少。在2022年夏天，应届毕业生面临了创纪录的高失业率和难以负担住房费用的打击。</p>
-<p>7月份，16至24岁的年轻人的失业率达到创纪录的19.9%。几个月来，失业率一直接近这一水平。随着Z世代面临着黯淡的经济前景，他们中的许多人放弃实现理想，选择用“<ahref="https://github.com/19920513/djy/blob/master/gb/tag/%E8%BA%BA%E5%B9%B3.md#1">躺平</a>”来回应对现状的不满，同时也表明了Z世代拒绝接受中共及习近平的国家发展计划。</p>
+<p>7月份，16至24岁的年轻人的失业率达到创纪录的19.9%。几个月来，失业率一直接近这一水平。随着Z世代面临着黯淡的经济前景，他们中的许多人放弃实现理想，选择用“躺平”来回应对现状的不满，同时也表明了Z世代拒绝接受中共及习近平的国家发展计划。</p>
 <p>《金融时报》报导，麦格理首席中国经济学家胡伟俊（Larry Hu）说：“年轻人是劳动力市场上是最脆弱的群体，因为他们没有经验。”胡伟俊认为，高失业率是广泛经济疲软的结果。</p>
-<p>他补充说，“<ahref="https://github.com/19920513/djy/blob/master/gb/tag/%E6%B8%85%E9%9B%B6.md#1">清零</a>政策”严重影响了服务行业，而服务行业雇用了大量的年轻人。</p>
+<p>他补充说，“清零政策”严重影响了服务行业，而服务行业雇用了大量的年轻人。</p>
 <p>敏特认为，如果不补救对这些受过教育一代所造成的经济损失，中共即使结束封锁以及结束大规模核酸测试，也无法解决这些年轻人的愤怒，这些年轻人都曾对自己有更高的期望。</p>
 <h2>不要做“牵线木偶”</h2>
 <p>在上周末的抗议活动中，许多最有发言权的参与者是年轻人。一名学生特别提到了青年的失业率数字。其他人提到了封控措施对“自由”的影响。</p>
@@ -33,45 +33,36 @@
 <p>在中国的社交媒体上，许多球迷抨击中共的粗暴审查制度。他们将央视和其它渠道的世界杯转播画面放在一起对比，揭示出外国频道播放的不戴口罩球迷镜头往往没有出现在中国转播画面中，中国转播使用的是聚焦球员和教练的其它镜头角度。</p>
 <p>责任编辑：林妍#</p>
 	
-<hr>
-
-
 <strong>相关新闻：</strong>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/22/11/29/n13875255.md#1">中国老龄化呈五特点 需护理的老人逾4500万</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/22/11/30/n13875902.md#1">消息：广州抗议活动升级 爆发警民冲突</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/22/11/30/n13875921.md#1">中共政法委欲打击抗议者 被指把人民当敌人</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/3/26/n13958682.md#1">河南兰考前政法委副书记潜逃 舆论闹大</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/22/11/29/n13875255.md#1">中国老龄化呈五特点 需护理的老人逾4500万</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/22/11/30/n13875902.md#1">消息：广州抗议活动升级 爆发警民冲突</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/22/11/30/n13875921.md#1">中共政法委欲打击抗议者 被指把人民当敌人</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/24/7/5/n14283947.md#1">【新闻五人行】大陆金融女学霸轻生 全网痛议</a></li>
 <hr>
-
-
 <strong>编辑推荐：</strong>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/18/12/9/n10900044.md?dfh#1" target="_blank">303万人举报江泽民</a></li><li><a href="https://github.com/tsiac2612/djy/blob/master/gb/19/12/26/n11747470.md#1" target="_blank">为中共效力的红色特工 后来怎么样了（2）</a></li><li><a href="https://github.com/tsiac2612/djy/blob/master/gb/18/9/17/n10720119.md#1" target="_blank">俞晓薇：迫害好人路不通 中共作恶者务必赎罪</a></li>
-<hr>
-
+<li><a href="https://github.com/1992513/djy/blob/master/gb/21/1/23/n12706455.md#1" target="_blank">“天安门自焚”伪案八大悬疑人物</a></li><li><a href="https://github.com/1992513/djy/blob/master/gb/19/1/2/n10947759.md#1" target="_blank">传奇总统里根（5）：竞选总统 众望所归</a></li><li><a href="https://github.com/1992513/djy/blob/master/gb/8/9/15/n2263295.md#1" target="_blank">调查报告：法轮功与健康</a></li>
 <strong>热门新闻：</strong>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/3/18/n13953285.md#1">独家：“神的指引” 中领馆员工成功出逃</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/3/20/n13954628.md#1">【百年真相】晚年街头乞讨 大师叶企孙往事</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/3/19/n13953674.md#1">春分一刻千金难买 你要知道的春分大小事</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/3/17/n13952068.md#1">前蜀异人精通异术 预测他人命数奇准</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/2/20/n13933873.md#1">诗：末世的拷问</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/3/24/n13957888.md#1">【菁英论坛】瓦格纳非洲杀华工 中俄恩仇难解</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/3/24/n13957886.md#1">【环球直击】美民间团体国会山集会 支持禁用TikTok</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/3/25/n13958410.md#1">【马克时空】美陆战队坦克兵谈M1A1（上）</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/3/23/n13956572.md#1">习近平留话给普京 专家称其误判国际形势</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/3/23/n13957045.md#1">露营陆综爆造假 陈伟霆等艺人回酒店被拍到</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/3/23/n13957023.md#1">分析：习近平和普京的最大恐惧是什么</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/3/23/n13957045.md#1">露营陆综爆造假 陈伟霆等艺人回酒店被拍到</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/3/23/n13957092.md#1">舒淇新造型显好身材 不节食减肥法引关注</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/3/23/n13956820.md#1">沈文程出道40年开唱 张菲挺老友现身又献声</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/3/22/n13956278.md#1">孙俪自曝将进组拍戏 得意一对儿女为她做美食</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/3/23/n13957143.md#1">范丞丞与李晨将同框节目 范冰冰再度受关注</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/3/20/n13954459.md#1">樱桃抗癌减肥、治痛风  但吃时要注意1件事</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/3/24/n13957337.md#1">奶酪是心脏的死敌？这样的奶酪对身体好</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/3/24/n13957502.md#1">预防心脏病从生活中做起 注意4个早期征兆</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/3/23/n13956668.md#1">连6年蝉联全球最幸福国家 芬兰开大师班授课</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/3/23/n13956575.md#1">木制家具经典不败 5优点值得你投资布置居家</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/24/7/1/n14281635.md#1">【未解之谜】“黛玉”再次转世归来？陈晓旭的四世轮回</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/24/6/29/n14280210.md#1">苏轼小时和黠鼠交手 他为何输了？</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/24/7/1/n14281646.md#1">【佳人传】 作诗千首 持斋修道的汪端</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/24/6/29/n14279772.md#1">【古道人生】女子婚姻不好 可能是什么原因？</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/24/7/1/n14280988.md#1">这仆人怎得变身为太守？一介贫儿又怎成了皇帝亲信呢？</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/24/7/6/n14285334.md#1">【时事军事】空射版标准6 填补美军关键领域</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/24/7/6/n14284972.md#1">【晚间新闻】华人教授被控诈骗1600万美元</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/24/7/6/n14285233.md#1">【时事金扫描】英国大变天 新首相曾两次访台</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/24/7/4/n14283791.md#1">中国“快递一哥”顺丰负债千亿 流动资产仅百亿</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/24/7/5/n14283914.md#1">令外籍人士最感幸福的10个国家 亚洲占半</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/24/7/3/n14282587.md#1">北京等多地房价暴跌 分析：房市未见底</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/24/7/5/n14284692.md#1">胡歌携妻与香港艺人聚餐 老婆正面照首度曝光</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/24/7/4/n14283779.md#1">贝克汉姆夫妇庆银婚 身着25年前紫色礼服放闪</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/24/7/6/n14285195.md#1">26届台北电影奖完整名单 影帝阮经天影后林品彤</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/24/7/5/n14284348.md#1">《神偷奶爸4》影评 观众给最高 影评员给最低</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/24/7/6/n14285307.md#1">上海开唱在高台上滑跪 刘德华因危险动作道歉</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/24/7/6/n14284934.md#1">越吃越瘦？专家：“负热量食物”有助减重</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/24/7/4/n14283587.md#1">除了保存食物的用途 冰箱也是料理“高手”</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/24/7/7/n14285552.md#1">在游泳池最容易得这三种病 千万要小心</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/24/6/30/n14280741.md#1">新冠疫情来势汹汹 中医师教你这样预防与改善</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/24/7/2/n14282156.md#1">想吃高纤早餐 教你这些创意点子</a></li>
 <hr>
-
-<strong>本文转自<a href="https://www.epochtimes.com">大纪元</a>（国内需用<a href="https://github.com/19920513/www/blob/master/README.md#8">翻墙软件</a>才能访问）</strong><p>下载<a href="https://github.com/19920513/www/blob/master/README.md#8">翻墙软件</a>浏览原文：<a href="https://www.epochtimes.com/gb/22/11/30/n13876294.htm">解封遥遥无期 中国Z世代不再“躺平”</a></p><hr>
-
-<strong>手机上长按并复制下面二维码分享本文章：</strong><br><br><img src="https://chart.apis.google.com/chart?cht=qr&chs=240x240&choe=UTF-8&chld=M|2&chl=https://github.com/19920513/djy/blob/master/gb/22/11/30/n13876294.md%231" title="分享本文章"></td><td VALIGN=TOP><a href="https://github.com/19920513/djy/blob/master/gb/16/1/21/n4622075.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/wei-f1.jpg" title="中共的伪火骗局"  alt="中共的伪火骗局"></a><br><a href="https://github.com/19920513/www/blob/master/README.md?dfh#9" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/yong-h.jpg" title="永恒的见证"  alt="永恒的见证"></a><br><a href="https://github.com/19920513/djy/blob/master/gb/13/9/29/n3974789.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/shang-lnz.jpg" title="善良女子被中共投男牢"  alt="善良女子被中共投男牢"></a><br><a href="https://github.com/19920513/djy/blob/master/gb/16/3/16/n4663449.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/huo-z3.jpg" title="警卫目击活摘器官"  alt="警卫目击活摘器官"></a><br><a href="https://github.com/19920513/djy/blob/master/gb/16/8/7/n8177641.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/huo-z4.jpg" title="证人描述活摘恐怖"  alt="证人描述活摘恐怖"></a><br><a href="https://github.com/19920513/djy/blob/master/gb/10/4/19/n2881569.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/huo-z1.jpg" title="揭开活摘器官黑幕"  alt="揭开活摘器官黑幕"></a><br><a href="https://github.com/19920513/djy/blob/master/gb/10/11/7/n3077476.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/ma-ks.jpg" title="马克思的成魔之路"  alt="马克思的成魔之路"></a><br><a href="https://github.com/19920513/djy/blob/master/gb/14/6/9/n4173977.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/chang-zs.jpg" title="藏字石 蕴天机"  alt="藏字石 蕴天机"></a><br><a href="https://github.com/19920513/djy/blob/master/gb/18/5/10/n10381511.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/st1.jpg" title="关注三亿人三退"  alt="关注三亿人三退"></a><br><a href="https://github.com/19920513/djy/blob/master/gb/18/3/21/n10237682.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/jie-t.jpg" title="解体中共复兴中华"  alt="解体中共复兴中华"></a><br><a href="https://github.com/19920513/djy/blob/master/gb/9/2/9/n2422991.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/gao-zs.jpg" title="中共迫害良心律师"  alt="中共迫害良心律师"></a><br><a href="https://github.com/19920513/djy/blob/master/gb/18/12/9/n10900044.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/sj1.jpg" title="三百多万人举报江泽民"  alt="三百多万人举报江泽民"></a><br><a href="https://github.com/19920513/djy/blob/master/gb/18/8/28/n10672014.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/sj2.jpg" title="这些官员为何起诉江泽民"  alt="这些官员为何起诉江泽民"></a><br><a href="https://github.com/19920513/djy/blob/master/gb/8/12/18/n2367165.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/liangan.jpg" title="海峡两岸的强烈对比"  alt="海峡两岸的强烈对比"></a><br><a href="https://github.com/19920513/djy/blob/master/gb/15/12/10/n4593139.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/jia-ndzl.jpg" title="加拿大总理的贺信"  alt="加拿大总理的贺信"></a><br><a href="https://github.com/19920513/djy/blob/master/gb/11/6/17/n3289382.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/xiao-wd.jpg" title="探寻真相兼听则明"  alt="探寻真相兼听则明"></a><br><a href="https://github.com/19920513/djy/blob/master/gb/18/10/27/n10812623.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/yindu.jpg" title="印度媒体报道东方"  alt="印度媒体报道东方"></a><br><a href="https://github.com/19920513/djy/blob/master/gb/18/6/9/n10469652.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/xie-j.jpg" title="不一样的海外校园"  alt="不一样的海外校园"></a><br><a href="https://github.com/19920513/djy/blob/master/gb/7/4/5/n1669415.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/li-up.jpg" title="从大师到徒弟的传奇"  alt="从大师到徒弟的传奇"></a><br><a href="https://github.com/19920513/djy/blob/master/gb/17/5/26/n9191512.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/zfl2.jpg" title="亿万人与东方一本奇书"  alt="亿万人与东方一本奇书"></a><br><a href="https://github.com/19920513/djy/blob/master/gb/13/11/27/n4020290.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/zhen-h.jpg" title="大陆见不到的震撼场面"  alt="大陆见不到的震撼场面"></a><br><a href="https://github.com/19920513/djy/blob/master/gb/15/7/17/n4482910.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/dalu-sk.jpg" title="人心向善 大陆当初盛况"  alt="人心向善 大陆当初盛况"></a><br><a href="https://github.com/19920513/djy/blob/master/gb/19/1/5/n10955468.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/zfl1.jpg" title="追寻真理 这书讲什么"  alt="追寻真理 这书讲什么"></a><br><a href="https://github.com/19920513/www/blob/master/README.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/fq1.jpg" title="下载免费翻墙软件"  alt="下载免费翻墙软件"></a><br></td></tr></table>
+<strong>本文转自<a href="https://cn.epochtimes.com">大纪元</a>（国内需用<a href="https://github.com/1992513/www/blob/master/README.md#8">翻墙软件</a>才能访问）</strong><p>下载<a href="https://github.com/1992513/www/blob/master/README.md#8">翻墙软件</a>浏览原文：<a href="https://cn.epochtimes.com/gb/22/11/30/n13876294.htm">解封遥遥无期 中国Z世代不再“躺平”</a></p><hr>
+<strong>手机上长按并复制下面二维码分享本文章：</strong><br><br><img src="https://quickchart.io/qr?size=256&text=https://github.com/1992513/djy/blob/master/gb/22/11/30/n13876294.md%231" title="分享本文章"></td><td VALIGN=TOP><a href="https://github.com/1992513/djy/blob/master/gb/16/1/21/n4622075.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/wei-f1.jpg" title="中共的伪火骗局"  alt="中共的伪火骗局"></a><br><a href="https://github.com/1992513/www/blob/master/README.md?dfh#9" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/yong-h.jpg" title="永恒的见证"  alt="永恒的见证"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/13/9/29/n3974789.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/shang-lnz.jpg" title="善良女子被中共投男牢"  alt="善良女子被中共投男牢"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/16/3/16/n4663449.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/huo-z3.jpg" title="警卫目击活摘器官"  alt="警卫目击活摘器官"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/16/8/7/n8177641.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/huo-z4.jpg" title="证人描述活摘恐怖"  alt="证人描述活摘恐怖"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/10/4/19/n2881569.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/huo-z1.jpg" title="揭开活摘器官黑幕"  alt="揭开活摘器官黑幕"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/10/11/7/n3077476.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/ma-ks.jpg" title="马克思的成魔之路"  alt="马克思的成魔之路"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/14/6/9/n4173977.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/chang-zs.jpg" title="藏字石 蕴天机"  alt="藏字石 蕴天机"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/18/5/10/n10381511.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/st1.jpg" title="关注三亿人三退"  alt="关注三亿人三退"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/18/3/21/n10237682.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/jie-t.jpg" title="解体中共复兴中华"  alt="解体中共复兴中华"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/9/2/9/n2422991.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/gao-zs.jpg" title="中共迫害良心律师"  alt="中共迫害良心律师"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/18/12/9/n10900044.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/sj1.jpg" title="三百多万人举报江泽民"  alt="三百多万人举报江泽民"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/18/8/28/n10672014.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/sj2.jpg" title="这些官员为何起诉江泽民"  alt="这些官员为何起诉江泽民"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/8/12/18/n2367165.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/liangan.jpg" title="海峡两岸的强烈对比"  alt="海峡两岸的强烈对比"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/15/12/10/n4593139.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/jia-ndzl.jpg" title="加拿大总理的贺信"  alt="加拿大总理的贺信"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/11/6/17/n3289382.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/xiao-wd.jpg" title="探寻真相兼听则明"  alt="探寻真相兼听则明"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/18/10/27/n10812623.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/yindu.jpg" title="印度媒体报道东方"  alt="印度媒体报道东方"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/18/6/9/n10469652.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/xie-j.jpg" title="不一样的海外校园"  alt="不一样的海外校园"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/7/4/5/n1669415.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/li-up.jpg" title="从大师到徒弟的传奇"  alt="从大师到徒弟的传奇"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/17/5/26/n9191512.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/zfl2.jpg" title="亿万人与东方一本奇书"  alt="亿万人与东方一本奇书"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/13/11/27/n4020290.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/zhen-h.jpg" title="大陆见不到的震撼场面"  alt="大陆见不到的震撼场面"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/15/7/17/n4482910.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/dalu-sk.jpg" title="人心向善 大陆当初盛况"  alt="人心向善 大陆当初盛况"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/19/1/5/n10955468.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/zfl1.jpg" title="追寻真理 这书讲什么"  alt="追寻真理 这书讲什么"></a><br><a href="https://github.com/1992513/www/blob/master/README.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/fq1.jpg" title="下载免费翻墙软件"  alt="下载免费翻墙软件"></a><br></td></tr></table>
